# website

./: Cargo.toml  Dioxus.toml  build.sh  comfy-programming-language-design.html  comfy-programming-language-design.md  dawnbreaker-devlog-01.html  dawnbreaker-devlog-01.md  header-includes.yaml  index.html  index.md  template.html  watch.sh
includes/: footer.html  header.html
public/: style.css
src/: footer.md  main.rs  markdown.rs  pages.rs  poisson_disk_sampling.rs  post_list.md
src/devlogs/: 01.md
src/homepage/: intro.md  outro.md
src/pages/: mod.rs  poisson_disk_sampling.rs
src/poisson_disk_sampling/: intro.md
